动物卡内容添加

--- a/P2-动物交换卡/card.html
+++ b/P2-动物交换卡/card.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="utf-8">
     <title>动物交换卡</title>
     <link rel="stylesheet" href="styles.css">
@@ -9,17 +10,19 @@
 
 <body>
 <div class="animal-card">
-    <h3>阿拉斯加雪橇犬</h3>
-    <img src="placeholder.png" alt="name-of-your-animal">
+    <h3>宽吻海豚</h3>
+    <img src="bottlenosed.jpg" alt="宽吻海豚">
     <div class="animal-card-content">
-        <p>写出你最喜欢的动物的一些趣味小知识</p>
+        <p>吻较长，嘴短小，嘴裂外形似乎总是在微笑。</p>
         <ul>
-            <li><span>别称:</span>阿拉斯加犬</li>
-            <li><span>寿命：</span>12年～20年</li>
-            <li><span>体型：</span>大型犬</li>
-            <li><span>体型大小：</span>65-71</li>
+            <li><span>别称:</span>Bottlenosed dolphins,Gray Porpoise</li>
+            <li><span>身长：</span>雌性1.9～2.1米，雄性2.5～3.9米</li>
+            <li><span>体重：</span>雌性170-200千克，雄性300～650千克</li>
+            <li><span>分布地区：</span>大西洋、印度洋、太平洋、地中海，中国分布于渤海、南海和台湾海</li>
         </ul>
-        <p>写出你最喜欢的动物的具体描述...</p>
+        <p>
+            宽吻海豚又叫尖嘴海豚，胆鼻海豚。主要分布在温带和热带的各大海洋中，包括中国的黄海、渤海等海域。宽吻海豚常在靠近陆地的浅海地带活动，较少游向深海，和所有海豚一样，宽吻海豚长着和鱼一样的流线型身体。皮肤光滑无毛，体背面是发蓝的钢铁色和瓦灰色，腹部有很明显的凸起。吻较长，嘴短小，嘴裂外形似乎总是在微笑，为中国二级保护动物。雌性宽吻海豚的寿命在80年左右，而雄性宽吻海豚由于生活压力更大，不容易过50年。
+        </p>
     </div>
 </div>
 </body>
